@@ -38,4 +38,4 @@ int
 purge (const short purge_after, const struct waste_containers *waste, char *time_now,
        const int waste_dirs_total);
 
-bool is_time_to_purge (const char *HOMEDIR);
+bool is_time_to_purge (const char *HOMEDIR, bool force);
